add course materials and ipynb checkpoints

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /.vscode
-/The Modern Python 3 Bootcamp Notes.rtf
+/TMP3B Notes.rtf
 /TMP3B/Modules/__pycache__
+/TCPB/Course_Materials_Part1
+.ipynb_checkpoints
